@startuml

title __GUI's Class Diagram__\n

  package gui {
    class App {
        {static} + main()
        + start()
    }
  }
  

  abstract class Parameters {
      + Parameters()
      {abstract} + getRaw()
      {abstract} + getUnnamed()
      {abstract} + getNamed()
  }
  

  package gui {
    class AppMode {
        {static} - ourInstance : AppMode
        {static} + getInstance()
        - AppMode()
        + getMode()
        + setMode()
    }
  }
  

  package gui {
    enum APP_MODE {
      DEBUG
      NORMAL
    }
  }
  

  package gui {
    interface ContentGenerator {
        {abstract} + generate()
    }
  }
  

  package gui {
    class ContentLoader {
        {static} - ourInstance : ContentLoader
        {static} + getInstance()
        - ContentLoader()
        + loadParent()
    }
  }
  

  package gui {
    class ElementsHandler {
        - primaryScene : Scene
        - main : VBox
        {static} - ourInstance : ElementsHandler
        {static} + getInstance()
        - ElementsHandler()
        + getPrimaryScene()
        + getMain()
        + setPrimaryScene()
        + setMain()
    }
  }
  

  package gui {
    class ErrorDialogGenerator {
        ~ value : String
        + ErrorDialogGenerator()
        + generate()
    }
  }
  

  package gui {
    class NavbarController {
        + gotoAbout()
        + gotoAdd()
        + gotoBillings()
    }
  }
  

  package gui {
    class SceneSwitcher {
        - main : Node
        {static} - ourInstance : SceneSwitcher
        {static} + getInstance()
        - SceneSwitcher()
        - removeScene()
        - loadTableView()
        - loadPane()
        - loadParent()
        + switchScene()
        + switchScene()
    }
  }
  

  App -up-|> Application
  App +-down- Parameters
  AppMode o-- APP_MODE : mode
  AppMode +-down- APP_MODE
  ErrorDialogGenerator -up-|> ContentGenerator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
